checkbox display working

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="food_img">
     </div>
     <div class="hint"></div>
+    <ul class="answer_options">
       <li><input type="checkbox"/> Choice 1</li>
       <li><input type="checkbox"/> Choice 2</li>
       <li><input type="checkbox"/> Choice 3</li>
