barebones working quiz

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
     <div class="food_img">
     </div>
     <div class="hint"></div>
-    <ul class="answer_options">
-      <li><input type="checkbox"/> Choice 1</li>
-      <li><input type="checkbox"/> Choice 2</li>
-      <li><input type="checkbox"/> Choice 3</li>
-      <li><input type="checkbox"/> Choice 4</li>
+    <div class="answer_options">
+      <ul>
+      <li><button type="button" id="first_choice" class="choice_button">Choice 1 </button></li>
+      <li><button type="button" id="second_choice"  class="choice_button">Choice 2 </button></li>
+      <li><button type="button" id="third_choice" class="choice_button">Choice 3 </button></li>
+      <li><button type="button" id="fourth_choice" class="choice_button">Choice 4 </button></li>
     </ul>
+    </div>
+
     <button class="start_button">Start</button>
-    <button class="submit_button">Submit</button>
-    <button class="continue_button">Continue</button>
   </div>
 
 
