--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
   <title>Crickets Quiz</title>
 </head>
 <body>
+
+
+
+
+
+
   <div>
     <h1 class="title">Welcome to Crickets!</h1>
     <div class="food_img">
+      <img src="" width = "150" height = "150">
     </div>
     <div class="hint"></div>
     <div class="answer_options">
